Add AfterIfMany and BeforeIfMany